--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class="div"><u>Demo repository</u></h1>
 
-    <p class="header"><u>All the recipes :</u></p>
+    <p class="header"><u>Al the recipes :</u></p>
     <ul>
             <li><a href="/recipes/lasgna.html" >Click to see a burning chicken</a></li>
             <li><a href="/recipes/Chiken_sharma.html" >Click for chicken sharma</a></li>
