--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <h1 class="div"><u>Demo repository</u></h1>
 
-    <p class="header"><u>Al the recipes :</u></p>
+    <p class="header"><u>All the recipes :</u></p>
     <ul>
             <li><a href="/recipes/lasgna.html" >Click to see a burning chicken</a></li>
             <li><a href="/recipes/Chiken_sharma.html" >Click for chicken sharma</a></li>
     </ul>
-    <img class="img" src="demo_repos/recipesImages/Junk-food.jpg" alt="">
+    <img class="img" src="/recipes/Images/Junk-food.jpg" alt="">
     
 </body>
 </html>
