--- a/recipes/lasgna.html
+++ b/recipes/lasgna.html
@@ -10,7 +10,7 @@
 <body>
     <h1 style="text-align: center;"><u class="new1">Picture of a chicken</u></h1>
     <div class="img">
-    <img height="200px" width="250px" src="/recipes/Images/image.webp" alt="Picture of a chicken burned">
+    <img height="200px" width="250px" src="Images/image.webp" alt="Picture of a chicken burned">
     </div>
     <p class="bg">So you you would like to make a burning chick too. Here is the details :</p>
     <h3 class="bg">Ingredients :</h3>
